Forgot to add the system name to the last page, there it is

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -8382,7 +8382,7 @@ TB</property>
 		  <property name="right_padding">0</property>
 
 		  <child>
-		    <widget class="GtkLabel" id="label258">
+		    <widget class="GtkLabel" id="create-congrats-label">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Congratulations, you have successfully created a new virtual system, &lt;b&gt;$SYSTEM_NAME&lt;/b&gt;.
 
