Mark bullet points as non-translatable

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -5368,7 +5368,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label161">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5396,7 +5396,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label162">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5424,7 +5424,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label163">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5452,7 +5452,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label164">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5480,7 +5480,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label165">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
