Added UI for taking a screenshot of the VNC window

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -3289,6 +3289,22 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 	      <property name="homogeneous">True</property>
 	    </packing>
 	  </child>
+
+	  <child>
+	    <widget class="GtkToolButton" id="control-screenshot">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Take screenshot</property>
+	      <property name="use_underline">True</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_control_screenshot_clicked" last_modification_time="Tue, 15 Aug 2006 20:47:57 GMT"/>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
+	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
