--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -4042,11 +4042,15 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 </widget>
 
 <widget class="GtkWindow" id="vmm-progress">
+  <property name="width_request">300</property>
+  <property name="height_request">100</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Saving VM Image</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">False</property>
+  <property name="default_width">300</property>
+  <property name="default_height">100</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
@@ -5368,7 +5372,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label161">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5396,7 +5400,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label162">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5424,7 +5428,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label163">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5452,7 +5456,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label164">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5480,7 +5484,7 @@ TB</property>
 			  <child>
 			    <widget class="GtkLabel" id="label165">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="no">&lt;small&gt;●&lt;/small&gt;</property>
+			      <property name="label">&lt;small&gt;●&lt;/small&gt;</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
