Added support for desktop resize protocol, auto-resize window to fit VNC widget

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -3374,8 +3374,8 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 	    <widget class="GtkScrolledWindow" id="scrolledwindow6">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-	      <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+	      <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+	      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 	      <property name="shadow_type">GTK_SHADOW_NONE</property>
 	      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
@@ -3387,8 +3387,8 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 		  <child>
 		    <widget class="GtkImage" id="console-screenshot">
 		      <property name="visible">True</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
+		      <property name="xalign">0</property>
+		      <property name="yalign">0</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
 		    </widget>
